bug 259764 - don't need to set product id or application